--- a/index.html
+++ b/index.html
@@ -1,57 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Stay Mappy! 34.0522° N, 118.2437° W </title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
-
-</head>
-<body>
-
-	<header style="background-color: none; color:red opacity:.5;">
-		<li><a href="index.html">Ana Leticia Ma 
-		</a></li>
-		<nav>
-			
-			
-				
-				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="blog.html">Blog</a></li>
-
-			
-
-		</nav>
-	</header>
-	<section>
-		<p style="text-align:center;"><img src="ana.png" alt="Ana's picture" width="200" height="250">
-		<h2>Hello World!</h2>
-		<div> 
-			<p>My Name is <strong>Ana</strong> and I love making cool maps. <3</p>
-			<p> I am a GIS enthusiast living in Los Angeles, CA. </p>
-			<p>I like hiking, camping, and biking.</p>
-
-		</div>
-	</section>   
-
-
-
-<footer>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
-
-
-<a href="https://www.linkedin.com/in/analeticiam/" title="Ana's linkedin"> <i style="font-size:24px" class="fa">&#xf08c;</i></a>
-
-<a href="https://twitter.com/AnaLeticiaGIS" title="Ana's twitter"> <i style="font-size:24px" class="fa">&#xf099;</i></a>
-
-<a href="https://github.com/AnaleticiaGIS" title="Ana's github"><i style="font-size:24px" class="fa">&#xf09b;</i></a>
-
-<footer> © 2020 Ana Leticia Ma</footer>
-
-
-</body> 
-</html>
+Hi Testing! 
 
